syntax = "proto3";

option go_package = "github.com/fercevik729/STLKER/watcher-api/protos";

service Watcher {
	rpc GetInfo(TickerRequest) returns (TickerResponse);
	rpc MoreInfo(TickerRequest) returns (CompanyResponse);
}

message TickerRequest {
	string Ticker = 1;
	Currencies Destination = 2;
    
}

message TickerResponse {
	string Symbol = 1;
	string Open = 2;
	string High = 3;
	string Low = 4;
	string Price = 5;
	string Volume = 6;
  string LTD = 7;
	string PrevClose = 8;
	string Change = 9;
	string PercentChange = 10;
}

message CompanyResponse {
  string Ticker = 1;
  string Name = 2;
  string Exchange = 3;
  string Sector = 4;
  string MarketCap = 5;
  string PERatio = 6;
  string PEGRatio = 7;
  string DivPerShare = 8;
  string EPS = 9;
  string RevPerShare = 10;
  string ProfitMargin = 11;
  string YearHigh = 12;
  string YearLow = 13;
  string SharesOutstanding = 14;
  string PriceToBookRatio = 15;
  string Beta = 16;
}

// Currencies is the enum which represents the allowed currencies for the API
// USD is the default currency
enum Currencies {
  USD=0;
  EUR=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
  RON=9;
  SEK=10;
  CHF=11;
  ISK=12;
  NOK=13;
  HRK=14;
  RUB=15;
  TRY=16;
  AUD=17;
  BRL=18;
  CAD=19;
  CNY=20;
  HKD=21;
  IDR=22;
  ILS=23;
  INR=24;
  KRW=25;
  MXN=26;
  MYR=27;
  NZD=28;
  PHP=29;
  SGD=30;
  THB=31;
  ZAR=32;
}
