syntax = "proto3";

option go_package = "github.com/fercevik729/STLKER/watcher-api/protos";

service Watcher {
    rpc SubscribeTicker(stream TickerRequest) returns (stream TickerResponse);
}

message TickerRequest {
    string Ticker = 1;
}

message TickerResponse {
    float StockPrice = 1;
}
